cmake_minimum_required(VERSION 3.9)
project(Contacts)

set(CMAKE_CXX_STANDARD 11)
#find_package(Curses REQUIRED)
#include_directories(${CURSES_LIBRARIES})
#include_directories("./")
#find_package(RapidJSON REQUIRED)
find_package (Protobuf REQUIRED)
add_subdirectory(proto)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_executable(Contacts main.cpp Contacts.h Contacts.cpp ContactBook.cpp ContactBook.h ContactException.cpp ContactException.h Interface.cpp Interface.h)
include_directories(/usr/include)
include_directories(./proto/)
link_directories(/usr/lib)
target_link_libraries(Contacts ${PROTOBUF_LIBRARIES} pthread foo)